# OptAlg

./: CMakeLists.txt  README.md  log.txt  test.sh
include/optalg/: boxing.h  boxing_greedy.h  boxing_neighborhood.h  greedy.hpp  neighborhood.hpp
source/: boxing.cpp  boxing_greedy.cpp  boxing_neighborhood_geometry.cpp  boxing_neighborhood_geometry_overlap.cpp  boxing_neighborhood_order.cpp  cmd.cpp  gui.cpp
